fix: hive settings overflowing and searching bugging

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -276,6 +276,12 @@ form .file-upload input {
     flex-direction: column;
     gap: 10px;
     overflow: auto;
+
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 .view-contents .archive-list-box.empty {
@@ -321,6 +327,7 @@ form .file-upload input {
 }
 
 .view-contents #summary-contents #action-box {
+    margin-top: 30px;
     display: flex;
     justify-content: right;
 }
@@ -331,7 +338,7 @@ form .file-upload input {
     color: var(--accent-color);
     font-size: 14px;
     text-decoration: none;
-    padding:  15px;
+    padding: 15px;
     display: flex;
     gap: 7px;
     align-items: center;
@@ -348,7 +355,7 @@ form .file-upload input {
     position: relative;
 }
 
-.auth-card > a.logo {
+.auth-card>a.logo {
     color: var(--primary-color);
     font-size: 32px;
     font-weight: bold;
@@ -424,9 +431,19 @@ form .file-upload input {
 
 .settings-shell {
     color: var(--primary-color);
-    width: min(980px, calc(100% - 50px));
-    margin-top: 120px;
+    /* width: min(980px, calc(100% - 50px)); */
+    max-width: 1200px;
+    width: 100%;
+    height: calc(100% - 125px);
+    margin-top: 125px;
     padding-bottom: 60px;
+    overflow: auto;
+
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 .settings-header {
@@ -595,6 +612,12 @@ form .file-upload input {
 
 .uploads-panel {
     grid-column: span 1;
+    overflow: auto;
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 .uploads-list {
